--- a/public/assets/locales/ua/translation.json
+++ b/public/assets/locales/ua/translation.json
@@ -44,6 +44,15 @@
                 "warningLine1": "До моменту укладення договору всі введені тобою дані зберігаються у твоєму веб-браузері, ми не маємо до них доступу (GDPR).",
                 "warningLine2": "Тому НЕ перезапускай і НЕ закривай вікно браузера, тоді ти уникнеш повторного введення даних!"
             }
+        },
+        "groupTexts": {
+            "gp60" : "ГРУПА ПОЧАТКОВА (60 хв)",
+            "gp90" : "ГРУПА ПОЧАТКОВА (90 хв)",
+            "gp901" : "ГРУПА ПОЧАТКОВА  (90 хв)", 
+            "gk60" : "ГРУПА РЕГУЛЯРНА (60 хв)", 
+            "gk90" : "ГРУПА РЕГУЛЯРНА (90 хв)",
+            "gk902": "ГРУПА РЕГУЛЯРНА  (90 хв)",
+            "gz" : "ГРУПА РОЗШИРИНА"
         }
     }
 }
