recoded locales logic for separate component

--- a/public/assets/locales/ua/translation-header-instruction.json
+++ b/public/assets/locales/ua/translation-header-instruction.json
@@ -6,7 +6,7 @@
         },
         "instructionText": {
             "shortInstruction": "Коротка інструкція",
-            "easySteps": "Прості 4 кроки і договір підписан онлайн. Приготуй ID-картку / пашпорт / карту побиту і поїхали :)",
+            "easySteps": "Прості 4 кроки і договір підписан онлайн. Приготуй ID-картку / паспорт / карту побиту і поїхали :)",
             "checkData": "ПЕРЕВІРИТИ ДАНІ",
             "nextStep": "НАСТУПНИЙ КРОК",
             "downloadText": "ЗАВАНТАЖУЮ /",
