--- a/public/assets/locales/ua/steps.json
+++ b/public/assets/locales/ua/steps.json
@@ -1,13 +1,25 @@
 {
     "step1Texts": {
-        "step1Text": "Krok: 1",
-        "h2Text": "Wypełnij pola poniżej",
-        "pText": "Pamiętaj! Przy wypełnieniu danych osobowych zgadzasz się na przetwarzanie ich przez CG Olimpic w celu stworzenia oraz przechowywania umowy do momentu jej wygaśnięcia!"
+        "step1Text": "Крок: 1 / 4",
+        "h2Text": "Заповни всі поля",
+        "pText": "Пам'ятай! При заповенні особистих даних, погоджуєшся на їх обробку фірмою CG Olimpic з метою переховування договору до моменту його закінчення!"
     },
     "step2Texts": {
-
+        "step2Text": "Крок: 2 / 4",
+        "h2Text": "Уважно прочитай договір!",
+        "pText": "Якщо зауважиш помилку - повернись до кроку 1 і поправ дані."
     },
-    "Step4Texts": {
-        
+    "step3Texts": {
+        "step3Text": "Крок: 3 / 4",
+        "h2TextLine1": "Завантаж договір і збережи у довільному місті на комп'ютері.",
+        "h2TextLine2": "НЕ РОЗДРУКОВУЙ І НЕ ПІДПИСУЙ ДОГОВІР ВРУЧНУ, ВСЕ ВІДБУВАЄТЬСЯ ЕЛЕКТРОННО!",
+        "pTextLine1": "На цьому етапі мусимо упевнитись, що ти є: a) людиною і  б) дорослою особою і свідомо укладаєш договір.",
+        "pTextLine2": "В наступному кроці  прикрипи договір і натисни УКЛАДАЮ ДОГОВІР."
+    },
+    "step4Texts": {
+        "step4Text": "Крок: 4 / 4",
+        "h2Text": "Прикрипи завантажений раніше договір і натисни УКЛАДАЮ ДОГОВІР",
+        "pTextLine1": "Якщо все зроблено правильно - за мить отримаеш мейл з підтвердженням підписання договору.",
+        "pTextLine2": "Пам'ятай! Договір буде активований тільки після оплати CJK!"
     }
 }
