--- a/public/assets/locales/ua/form.json
+++ b/public/assets/locales/ua/form.json
@@ -10,5 +10,45 @@
         "packageFirst": "спочатку група",
         "choseFrequency": "обери",
         "schoolYear": "Шкільний рік"
+    },
+    "childDataText": {
+        "h3Text": "Дані дитини",
+        "nameText": "Ім'я та Прізвище",
+        "dateText": "Дата народження",
+        "agreeText": "Згода на використання зображення дитини*",
+        "lineText": "*Ми радимо залишити це поле зазначеним, щоб ви могли насолоджуватися фотографіями вашої малечі в наших соціальних мережах."
+    },
+    "parrentDataText": {
+        "h3Text": "Дані одного з батьків / законного опікуна",
+        "nameText": "Ім'я та Прізвище",
+        "idText": "Номер документу",
+        "cityText": "Місцевість",
+        "zipText": "Почтовий Індекс",
+        "addressText": "Вулиця, номер дому / квартири"
+    },
+    "contactDataText": {
+        "h3Text": "Контактні дані",
+        "motherTelText": "тел. матері / законного опікуна",
+        "fatherTelText": "тел. батька / законного опікуна",
+        "mailText": "Адреса e-mail для контакту",
+        "checkDataText": "ПЕРЕВІРИТИ ДАНІ",
+        "nextStepText": "НАСТУПНИЙ КРОК"
+    },
+    "checkFormText": {
+        "siteText": "ОБЕРИ ОБʼЄКТ",
+        "packageText": "ОБЕРИ ГРУПУ",
+        "frequencyText": "ОБЕРИ ПЕРІОДИЧНІСТЬ ЗАНЯТЬ",
+        "schoolYearText": "ОБЕРИ ШКІЛЬНИЙ РІК",
+        "childNameText": "ВВЕДИ ІМʼЯ ТА ПРИЗВІЩЕ ДИТИНИ",
+        "childDateText": "ВВЕДИ ДАТУ НАРОДЖЕННЯ ДИТИНИ У ФОРМАТІ: ДД-ММ-РРРР",
+        "parrentNameText": "ВВЕДИ ІМ'Я ТА ПРІЗВИЩЕ ОДНОГО З БАТЬКІВ / ЗАКОННОГО ОПІКУНА",
+        "parrentIdText": "ВВЕДИ СЕРІЮ ТА НОМЕР ПАСПОРТА / КАРТИ ПОБИТУ / ІД ГРОМАДЯНИНА",
+        "parrentCityText": "ВВЕДИ МІСЦЕВІСТЬ",
+        "parrentZipText": "ВВЕДИ ПОЧТОВИЙ ІНДЕКС",
+        "parrentAddressText": "ВВЕДИ АДРЕСУ ПРОЖИВАННЯ",
+        "telText": "ВВЕДИ НОМЕР ТЕЛЕФОНУ ПРИНАЙМНІ ОДНОГО З БАТЬКІВ / ЗАКОННОГО ОПІКУНА",
+        "mailText": "ВВЕДИ АДРЕС EMAIL",
+        "checkMailText": "ПЕРЕВІР ПРАВИЛЬНІСТЬ EMAIL",
+        "allRightText": "ВСЕ ВІРНО :)"
     }
 }
