--- a/public/assets/locales/ua/steps.json
+++ b/public/assets/locales/ua/steps.json
@@ -6,8 +6,8 @@
     },
     "step2Texts": {
         "step2Text": "Крок: 2 / 4",
-        "h2Text": "Уважно прочитай договір!",
-        "pText": "Якщо зауважиш помилку - повернись до кроку 1 і поправ дані."
+        "h2Text": "Уважно прочитай договір! Попроси допомоги перекладача якщо потрібно!",
+        "pText": "Якщо помітиш помилку - повернись до кроку 1 і поправ дані."
     },
     "step3Texts": {
         "step3Text": "Крок: 3 / 4",
