end page locales ready. Production version

--- a/public/assets/locales/ua/form.json
+++ b/public/assets/locales/ua/form.json
@@ -13,14 +13,14 @@
     },
     "childDataText": {
         "h3Text": "Дані дитини",
-        "nameText": "Ім'я та Прізвище",
+        "nameText": "Ім'я та Прізвище (латиньскими літерами)",
         "dateText": "Дата народження",
         "agreeText": "Згода на використання зображення дитини*",
         "lineText": "*Ми радимо залишити це поле зазначеним, щоб ви могли насолоджуватися фотографіями вашої малечі в наших соціальних мережах."
     },
     "parrentDataText": {
         "h3Text": "Дані одного з батьків / законного опікуна",
-        "nameText": "Ім'я та Прізвище",
+        "nameText": "Ім'я та Прізвище (латиньскими літерами)",
         "idText": "Номер документу",
         "cityText": "Місцевість",
         "zipText": "Почтовий Індекс",
