--- a/public/assets/locales/ua/steps.json
+++ b/public/assets/locales/ua/steps.json
@@ -11,10 +11,10 @@
     },
     "step3Texts": {
         "step3Text": "Крок: 3 / 4",
-        "h2TextLine1": "Завантаж договір і збережи у довільному місті на комп'ютері.",
+        "h2TextLine1": "Завантаж договір і збережи у довільному місці на комп'ютері.",
         "h2TextLine2": "НЕ РОЗДРУКОВУЙ І НЕ ПІДПИСУЙ ДОГОВІР ВРУЧНУ, ВСЕ ВІДБУВАЄТЬСЯ ЕЛЕКТРОННО!",
         "pTextLine1": "На цьому етапі мусимо упевнитись, що ти є: a) людиною і  б) дорослою особою і свідомо укладаєш договір.",
-        "pTextLine2": "В наступному кроці  прикрипи договір і натисни УКЛАДАЮ ДОГОВІР."
+        "pTextLine2": "В наступному кроці  прикріпи договір і натисни УКЛАДАЮ ДОГОВІР."
     },
     "step4Texts": {
         "step4Text": "Крок: 4 / 4",
