--- a/public/assets/locales/ua/sending.json
+++ b/public/assets/locales/ua/sending.json
@@ -4,5 +4,9 @@
     "fileText": "Натисни, щоб додати договір (Не може перевищувати 2Mb)",
     "limitText": "ВЕЛИКУЙ РОЗМІР ФАЙЛУ, НЕ МОЖЕ ПЕРЕВИЩУВАТУ 2MB!",
     "errorText": "ЩОСЬ ПІШЛО НЕ ТАК, СПРОБУЙ ЩЕ РАЗ!",
-    "bottonText": "УКЛАДАЮ ДОГОВІР"
+    "bottonText": "УКЛАДАЮ ДОГОВІР",
+    "endPagetextLine1": "Все добре! Договір укладено!",
+    "endPagetextLine2": "За мить отримаєш на e-mail підтвердження підписання договору.",
+    "endPagetextLine3": "Пам'ятай, для того щоб її активувати - вплати CJK!",
+    "endPagetextSpan": "Зараз можеш закрити це вікно / вкладку."
 }
