refactoring locales reducer, start make Unit Tests

--- a/public/assets/locales/pl/header.json
+++ b/public/assets/locales/pl/header.json
@@ -1,4 +1,6 @@
 {
-    "nameText": "Generator Umowy CG-Olimpic",
-    "discriptionText": "TYLKO DLA URZĄDZEŃ DESKTOPOWYCH (Komputery stacjonarne, Laptopy)"
+    "headerTexts": {
+        "nameText": "Generator Umowy CG-Olimpic",
+        "discriptionText": "TYLKO DLA URZĄDZEŃ DESKTOPOWYCH (Komputery stacjonarne, Laptopy)"
+    }
 }
