--- a/public/assets/locales/pl/ostest.json
+++ b/public/assets/locales/pl/ostest.json
@@ -1,4 +1,8 @@
 {
-    "h3Text": "Korzystasz ze Smartfona bądź Tableta",
-    "pText": "Umowę podpiszesz tylko na komputerze / laptopie!"
+    "osTestTexts":
+    {
+        "h3Text": "Korzystasz ze Smartfona bądź Tableta",
+        "pText": "Umowę podpiszesz tylko na komputerze / laptopie!"
+    }
 }
+
