--- a/public/assets/locales/ua/agreement.json
+++ b/public/assets/locales/ua/agreement.json
@@ -1,4 +1,6 @@
 {
-    "acceptAgreementText": "Постав галочку якщо все вірно",
-    "nextStepText": "НАСТУПНИЙ КРОК"
+    "agreementReadyTexts": {
+        "acceptAgreementText": "Постав галочку якщо все вірно",
+        "nextStepText": "НАСТУПНИЙ КРОК"
+    }
 }
