--- a/public/assets/locales/ua/header.json
+++ b/public/assets/locales/ua/header.json
@@ -1,4 +1,6 @@
 {
-    "nameText": "Генератор Договору CG-Olimpic",
-    "discriptionText": "ТІЛЬКИ ДЛЯ НАСТІЛЬНИХ ПРИСТРОїВ (Компьютери, Ноутбуки)"
+    "headerTexts": {
+        "nameText": "Генератор Договору CG-Olimpic",
+        "discriptionText": "ТІЛЬКИ ДЛЯ НАСТІЛЬНИХ ПРИСТРОїВ (Компьютери, Ноутбуки)"
+    }
 }
