--- a/public/assets/locales/ua/instruction.json
+++ b/public/assets/locales/ua/instruction.json
@@ -1,41 +1,43 @@
 {
-    "shortInstruction": "Коротка інструкція",
-    "easySteps": "Прості 4 кроки і договір підписан онлайн. Приготуй ID-картку / паспорт / карту побиту і поїхали :)",
-    "checkData": "ПЕРЕВІРИТИ ДАНІ",
-    "nextStep": "НАСТУПНИЙ КРОК",
-    "downloadText": "ЗАВАНТАЖУЮ /",
-    "signAgree": "ПІДПИСУЮ ДОГОВІР",
-    "letIsGo": "ПОЧИНАЄМО",
-    "instructionStep1": {
-        "step1": "КРОК 1 - Заповни всі поля і перевір дані",
-        "step1Line1": "- На цьому кроці вибераєш локацію, групу, періодичність і виповнюєш всі необхідні поля.",
-        "step1Line2": "- Більшість цих даних буде вказано в договорі.",
-        "step1Line3": "- Після заповнення всіх полів натисни",
-        "step1Line4": "- Якщо початкова перевірка пройшла успішно, натисни",
-        "checkKontaktData": "Будьласка! Уважно перевір свої контактні дані!"
-    },
-    "instructionStep2": {
-        "step2": "КРОК 2 - Ознайомся з проектом договору. Перевір дані ще раз",
-        "step2Line1": "На цьому кроці уважно ознайомся з умовами договору та перевір всі свої дані, а також дані дитини.",
-        "step2Line2": "Якщо все вірно, постав галочку під проектом договору та натисни"
-    },
-    "instructionStep3": {
-        "step3": "КРОК 3 - Завантаж створений договір і збережи у вибраному місці на своєму комп'ютері",
-        "step3Click": "Натисни",
-        "step3Line1": "і збережи договір в обраному місці на своєму комп'ютері",
-        "step3Line2": "Не змінюй назву та не збільшуй розмір файлу.",
-        "step3Remember": "Пам'ятай, Договір ще не укладено!"
-    },
-    "instructionStep4": {
-        "step4": "КРОК 4 - Укладення Договору",
-        "step4Line1": "На цьому кроці ти укладаєш договір з CG-Olimpic. Цей крок вкрай необхідний, ми повинні переконатися, що ти свідомо укладаєш договір.",
-        "step4Line2": "Натисни на відповідне поле у формі та прикріпи завантажений договір, потім натисни",
-        "step4Line3": "За мить отримаєш електронний лист із підтвердженням укладення договору та умовами його активації.",
-        "step4Line4": "Це все! Запрошуємо на заняття! :)"
-    },
-    "instructionWarning": {
-        "warningText": "!! ВАЖЛИВО !!",
-        "warningLine1": "До моменту укладення договору всі введені тобою дані зберігаються у твоєму веб-браузері, ми не маємо до них доступу (GDPR).",
-        "warningLine2": "Тому НЕ перезапускай і НЕ закривай вікно браузера, тоді ти уникнеш повторного введення даних!"
+    "instructionTexts": {
+        "shortInstruction": "Коротка інструкція",
+        "easySteps": "Прості 4 кроки і договір підписан онлайн. Приготуй ID-картку / паспорт / карту побиту і поїхали :)",
+        "checkData": "ПЕРЕВІРИТИ ДАНІ",
+        "nextStep": "НАСТУПНИЙ КРОК",
+        "downloadText": "ЗАВАНТАЖУЮ /",
+        "signAgree": "ПІДПИСУЮ ДОГОВІР",
+        "letIsGo": "ПОЧИНАЄМО",
+        "instructionStep1": {
+            "step1": "КРОК 1 - Заповни всі поля і перевір дані",
+            "step1Line1": "- На цьому кроці вибераєш локацію, групу, періодичність і виповнюєш всі необхідні поля.",
+            "step1Line2": "- Більшість цих даних буде вказано в договорі.",
+            "step1Line3": "- Після заповнення всіх полів натисни",
+            "step1Line4": "- Якщо початкова перевірка пройшла успішно, натисни",
+            "checkKontaktData": "Будьласка! Уважно перевір свої контактні дані!"
+        },
+        "instructionStep2": {
+            "step2": "КРОК 2 - Ознайомся з проектом договору. Перевір дані ще раз",
+            "step2Line1": "На цьому кроці уважно ознайомся з умовами договору та перевір всі свої дані, а також дані дитини.",
+            "step2Line2": "Якщо все вірно, постав галочку під проектом договору та натисни"
+        },
+        "instructionStep3": {
+            "step3": "КРОК 3 - Завантаж створений договір і збережи у вибраному місці на своєму комп'ютері",
+            "step3Click": "Натисни",
+            "step3Line1": "і збережи договір в обраному місці на своєму комп'ютері",
+            "step3Line2": "Не змінюй назву та не збільшуй розмір файлу.",
+            "step3Remember": "Пам'ятай, Договір ще не укладено!"
+        },
+        "instructionStep4": {
+            "step4": "КРОК 4 - Укладення Договору",
+            "step4Line1": "На цьому кроці ти укладаєш договір з CG-Olimpic. Цей крок вкрай необхідний, ми повинні переконатися, що ти свідомо укладаєш договір.",
+            "step4Line2": "Натисни на відповідне поле у формі та прикріпи завантажений договір, потім натисни",
+            "step4Line3": "За мить отримаєш електронний лист із підтвердженням укладення договору та умовами його активації.",
+            "step4Line4": "Це все! Запрошуємо на заняття! :)"
+        },
+        "instructionWarning": {
+            "warningText": "!! ВАЖЛИВО !!",
+            "warningLine1": "До моменту укладення договору всі введені тобою дані зберігаються у твоєму веб-браузері, ми не маємо до них доступу (GDPR).",
+            "warningLine2": "Тому НЕ перезапускай і НЕ закривай вікно браузера, тоді ти уникнеш повторного введення даних!"
+        }
     }
 }
