--- a/public/assets/locales/ua/sending.json
+++ b/public/assets/locales/ua/sending.json
@@ -1,12 +1,14 @@
 {
-    "yourNameText": "Твоє Ім'я та Прізвище",
-    "yourEmailText": "Твоя e-mail адреса",
-    "fileText": "Натисни, щоб додати договір (Не може перевищувати 2Mb)",
-    "limitText": "ВЕЛИКУЙ РОЗМІР ФАЙЛУ, НЕ МОЖЕ ПЕРЕВИЩУВАТУ 2MB!",
-    "errorText": "ЩОСЬ ПІШЛО НЕ ТАК, СПРОБУЙ ЩЕ РАЗ!",
-    "bottonText": "УКЛАДАЮ ДОГОВІР",
-    "endPagetextLine1": "Все добре! Договір укладено!",
-    "endPagetextLine2": "За мить отримаєш на e-mail підтвердження підписання договору.",
-    "endPagetextLine3": "Пам'ятай, для того щоб її активувати - вплати CJK!",
-    "endPagetextSpan": "Зараз можеш закрити це вікно / вкладку."
+    "sendingTexts": {
+        "yourNameText": "Твоє Ім'я та Прізвище",
+        "yourEmailText": "Твоя e-mail адреса",
+        "fileText": "Натисни, щоб додати договір (Не може перевищувати 2Mb)",
+        "limitText": "ВЕЛИКУЙ РОЗМІР ФАЙЛУ, НЕ МОЖЕ ПЕРЕВИЩУВАТУ 2MB!",
+        "errorText": "ЩОСЬ ПІШЛО НЕ ТАК, СПРОБУЙ ЩЕ РАЗ!",
+        "buttonText": "УКЛАДАЮ ДОГОВІР",
+        "endPagetextLine1": "Все добре! Договір укладено!",
+        "endPagetextLine2": "За мить отримаєш на e-mail підтвердження підписання договору.",
+        "endPagetextLine3": "Пам'ятай, для того щоб її активувати - вплати CJK!",
+        "endPagetextSpan": "Зараз можеш закрити це вікно / вкладку."
+    }
 }
