--- a/public/assets/locales/pl/agreement.json
+++ b/public/assets/locales/pl/agreement.json
@@ -1,4 +1,6 @@
 {
-    "acceptAgreementText": "Zaznacz jeśli wszystko się zgadza",
-    "nextStepText": "NASTĘPNY KROK"
+    "agreementReadyTexts": {
+        "acceptAgreementText": "Zaznacz jeśli wszystko się zgadza",
+        "nextStepText": "NASTĘPNY KROK"
+    }
 }
