--- a/public/assets/locales/ua/ostest.json
+++ b/public/assets/locales/ua/ostest.json
@@ -1,4 +1,6 @@
 {
-    "h3Text": "Користаєшся смартфоном або планшетом",
-    "pText": "Договір підпишеш тільки на комп'ютері / ноутбуці!"
+    "osTestTexts": {
+        "h3Text": "Користаєшся смартфоном або планшетом",
+        "pText": "Договір підпишеш тільки на комп'ютері / ноутбуці!"
+    }
 }
